--- a/pom.xml
+++ b/pom.xml
@@ -588,8 +588,8 @@
 				<configuration>
 					<skipCheckoutIfExists>false</skipCheckoutIfExists>
 					<connectionUrl>scm:git:https://github.com/pagopa/pagopa-ecommerce-commons.git</connectionUrl>
-					<scmVersionType>tag</scmVersionType>
-					<scmVersion>${pagopa-ecommerce-commons.version}</scmVersion>
+					<scmVersionType>branch</scmVersionType>
+					<scmVersion>CHK-2850-remote-traces</scmVersion>
 					<goals>install -DskipTests</goals>
 				</configuration>
 				<executions>
