--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -154,6 +154,8 @@ microservice-chart:
     OTEL_METRICS_EXPORTER: otlp
     OTEL_LOGS_EXPORTER: none
     OTEL_TRACES_SAMPLER: "always_on"
+    OTEL_INSTRUMENTATION_SPRING_INTEGRATION_ENABLED: "true"
+    OTEL_INSTRUMENTATION_SPRING_SCHEDULING_ENABLED: "false"
     NPG_URI: "https://stg-ta.nexigroup.com/api/phoenix-0.0"
     NPG_READ_TIMEOUT: "10000"
     NPG_CONNECTION_TIMEOUT: "10000"
