add spring integration opentelemetry dev, uat, prod

--- a/helm/values-prod.yaml
+++ b/helm/values-prod.yaml
@@ -151,6 +151,8 @@ microservice-chart:
     OTEL_METRICS_EXPORTER: otlp
     OTEL_LOGS_EXPORTER: none
     OTEL_TRACES_SAMPLER: "always_on"
+    OTEL_INSTRUMENTATION_SPRING_INTEGRATION_ENABLED: "true"
+    OTEL_INSTRUMENTATION_SPRING_SCHEDULING_ENABLED: "false"
     SEND_PAYMENT_RESULT_TIMEOUT_SECONDS: "3900"
     SEND_PAYMENT_RESULT_EXPIRATION_OFFSET_SECONDS: "5"
     ECS_SERVICE_NAME: pagopa-ecommerce-event-dispatcher-service
