--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -156,6 +156,7 @@ microservice-chart:
     OTEL_TRACES_SAMPLER: "always_on"
     OTEL_INSTRUMENTATION_SPRING_INTEGRATION_ENABLED: "true"
     OTEL_INSTRUMENTATION_SPRING_SCHEDULING_ENABLED: "false"
+    OTEL_INSTRUMENTATION_SPRING_INTEGRATION_GLOBAL_CHANNEL_INTERCEPTOR_PATTERNS: "controlBusInputChannel, transaction*"
     NPG_URI: "https://stg-ta.nexigroup.com/api/phoenix-0.0"
     NPG_READ_TIMEOUT: "10000"
     NPG_CONNECTION_TIMEOUT: "10000"
