--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -67,7 +67,7 @@ transactionsService.connectionTimeout=${TRANSACTIONS_SERVICE_CONNECTION_TIMEOUT}
 transactionsService.apiKey=${TRANSACTIONS_SERVICE_API_KEY}
 
 confidentialDataManager.personalDataVault.apiKey=${ECOMMERCE_PERSONAL_DATA_VAULT_API_KEY}
-confidentialDataManager.sharedPersonalDataVault.apiKey=${SHARED_PERSONAL_DATA_VAULT_API_KEY}
+confidentialDataManager.walletSessionPersonalDataVault.apiKey=${WALLET_SESSION_PERSONAL_DATA_VAULT_API_KEY}
 confidentialDataManager.personalDataVault.apiBasePath=${PERSONAL_DATA_VAULT_API_BASE_PATH}
 
 sendPaymentResult.timeoutSeconds=${SEND_PAYMENT_RESULT_TIMEOUT_SECONDS}
