--- a/src/test/resources/application.test.properties
+++ b/src/test/resources/application.test.properties
@@ -59,7 +59,7 @@ transactionsService.connectionTimeout=10000
 transactionsService.apiKey=transactions-service-api-key
 
 confidentialDataManager.personalDataVault.apiKey=apiKey
-confidentialDataManager.sharedPersonalDataVault.apiKey=apiKey
+confidentialDataManager.walletSessionPersonalDataVault.apiKey=apiKey
 confidentialDataManager.personalDataVault.apiBasePath=localhost
 
 sendPaymentResult.timeoutSeconds=3900
