--- a/helm/values-prod.yaml
+++ b/helm/values-prod.yaml
@@ -163,6 +163,8 @@ microservice-chart:
     NPG_PAYPAL_PSP_LIST: "" #TODO to be filled with psp id list that are expected to be present into psp api keys configuration
     NPG_MYBANK_PSP_LIST: "" #TODO to be filled with psp id list that are expected to be present into psp api keys configuration
     NPG_BANCOMATPAY_PSP_LIST: "" #TODO to be filled with psp id list that are expected to be present into psp api keys configuration
+    NPG_SATISPAY_PSP_LIST: "" #TODO to be filled with psp id list that are expected to be present into psp api keys configuration
+    NPG_APPLEPAY_PSP_LIST: "" #TODO to be filled with psp id list that are expected to be present into psp api keys configuration
     REDIS_STREAM_EVENT_CONTROLLER_STREAM_KEY: "event-dispatcher-commands"
     REDIS_STREAM_EVENT_CONTROLLER_CONSUMER_GROUP_PREFIX: "event-dispatcher"
     REDIS_STREAM_EVENT_CONTROLLER_CONSUMER_NAME_PREFIX: "event-dispatcher"
@@ -192,6 +194,8 @@ microservice-chart:
     NPG_PAYPAL_PSP_KEYS: npg-paypal-psp-keys
     NPG_BANCOMATPAY_PSP_KEYS: npg-bancomatpay-psp-keys
     NPG_MYBANK_PSP_KEYS: npg-mybank-psp-keys
+    NPG_SATISPAY_PSP_KEYS: npg-satispay-psp-keys
+    NPG_APPLEPAY_PSP_KEYS: npg-apple-pay-psp-keys
   keyvault:
     name: "pagopa-p-ecommerce-kv"
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
