--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -85,6 +85,10 @@ npg.authorization.bancomatpay.keys=${NPG_BANCOMATPAY_PSP_KEYS}
 npg.authorization.bancomatpay.pspList=${NPG_BANCOMATPAY_PSP_LIST}
 npg.authorization.mybank.keys=${NPG_MYBANK_PSP_KEYS}
 npg.authorization.mybank.pspList=${NPG_MYBANK_PSP_LIST}
+npg.authorization.satispay.keys=${NPG_SATISPAY_PSP_KEYS}
+npg.authorization.satispay.pspList=${NPG_SATISPAY_PSP_LIST}
+npg.authorization.applepay.keys=${NPG_APPLEPAY_PSP_KEYS}
+npg.authorization.applepay.pspList=${NPG_APPLEPAY_PSP_LIST}
 redisStream.eventController.streamKey=${REDIS_STREAM_EVENT_CONTROLLER_STREAM_KEY}
 redisStream.eventController.consumerGroupPrefix=${REDIS_STREAM_EVENT_CONTROLLER_CONSUMER_GROUP_PREFIX}
 redisStream.eventController.consumerNamePrefix=${REDIS_STREAM_EVENT_CONTROLLER_CONSUMER_NAME_PREFIX}
