--- a/helm/values-prod.yaml
+++ b/helm/values-prod.yaml
@@ -161,7 +161,7 @@ microservice-chart:
     NPG_CONNECTION_TIMEOUT: "10000"
     NPG_CARDS_PSP_LIST: "BCITITMM,CIPBITMM,BIC36019,UNCRITMM,BPPIITRRXXX,PPAYITR1XXX,BNLIITRR,PASCITMM,WOLLNLB1,BPMOIT22,SARDIT31,IFSPIT21"
     NPG_PAYPAL_PSP_LIST: "" #TODO to be filled with psp id list that are expected to be present into psp api keys configuration
-    NPG_MYBANK_PSP_LIST: "" #TODO to be filled with psp id list that are expected to be present into psp api keys configuration
+    NPG_MYBANK_PSP_LIST: "UNCRITMM" #TODO to be filled with psp id list that are expected to be present into psp api keys configuration
     NPG_BANCOMATPAY_PSP_LIST: "" #TODO to be filled with psp id list that are expected to be present into psp api keys configuration
     NPG_SATISPAY_PSP_LIST: "" #TODO to be filled with psp id list that are expected to be present into psp api keys configuration
     NPG_APPLEPAY_PSP_LIST: "" #TODO to be filled with psp id list that are expected to be present into psp api keys configuration
