--- a/pom.xml
+++ b/pom.xml
@@ -590,7 +590,7 @@
 					<connectionUrl>scm:git:https://github.com/pagopa/pagopa-ecommerce-commons.git</connectionUrl>
 					<scmVersionType>tag</scmVersionType>
 					<scmVersion>${pagopa-ecommerce-commons.version}</scmVersion>
-					<scmVersionType>branch</scmVersionType>
+					<goals>install -DskipTests</goals>
 				</configuration>
 				<executions>
 					<execution>
