--- a/.devops/azure-templates/swap-new-old-deployment.yml
+++ b/.devops/azure-templates/swap-new-old-deployment.yml
@@ -3,8 +3,6 @@ parameters:
     type: boolean
   - name: "ENV"
     type: string
-  - name: "CURRENT_VERSION"
-    type: string
   - name: "NEW_VERSION"
     type: string
   - name: "APP_NAME"
@@ -15,13 +13,15 @@ parameters:
     type: string
   - name: "VALUE_FILE"
     type: string
+  - name: "HELM_NEW_RELEASE_FILTER"
+    type: string
   - name: "CHART_TYPE"
     type: string
+    #optional parameters
     default: "filepath"
   - name: "CHART_PATH"
     type: string
     default: "helm"
-    #optional parameters
   - name: "DO_BLUE_GREEN_DEPLOY"
     type: boolean
     default: false
@@ -36,9 +36,28 @@ parameters:
     default: "none"
 steps:
 
+  # STEP 0: retrieve current release version from helm release
+  - task: HelmDeploy@0
+    displayName: List event dispatcher releases
+    name: helm_event_dispatcher_releases
+    inputs:
+      kubernetesServiceEndpoint: ${{ parameters.KUBERNETES_SERVICE_CONN }}
+      namespace: ${{ parameters.NAMESPACE }}
+      command: ls
+      arguments: --filter ${{ parameters.HELM_NEW_RELEASE_FILTER }} --output json
+  - task: Bash@3
+    name: helm_chart_version
+    displayName: 'Retrieve helm chart version associated to helm release'
+    inputs:
+      targetType: "inline"
+      script: |
+        version=$(echo '$(helm_event_dispatcher_releases.helmOutput)' | yq '.[].chart' | sed -e 's/pagopa-ecommerce-event-dispatcher-//g')
+        echo "##vso[task.setvariable variable=helm_current_release_version;isOutput=true]$version"
+      failOnStderr: true
+
   # STEP 1: Checkout current version tag
   - script: |
-      checkoutVersion=${{ parameters.CURRENT_VERSION }} 
+      checkoutVersion=$helm_current_release_version
       echo "Checkout current version repo tag: [$checkoutVersion]" 
       git checkout $checkoutVersion
     displayName: 'Checkout current version tag'
@@ -67,7 +86,7 @@ steps:
     inputs:
       targetType: "inline"
       script: |
-        declare -A commandUrls=( ["DEV"]="https://weudev.ecommerce.internal.dev.platform.pagopa.it/pagopa-ecommerce-event-dispatcher-new/event-dispatcher/event-receivers/commands" ["UAT"]="https://weuuat.ecommerce.internal.uat.platform.pagopa.it/pagopa-ecommerce-event-dispatcher-new/event-dispatcher/event-receivers/commands" ["PROD"]="https://weuprod.ecommerce.internal.platform.pagopa.it/pagopa-ecommerce-event-dispatcher-new/event-dispatcher/event-receivers/commands")
+        declare -A commandUrls=( ["DEV"]="https://weudev.ecommerce.internal.dev.platform.pagopa.it/pagopa-ecommerce-event-dispatcher-old/event-dispatcher/event-receivers/commands" ["UAT"]="https://weuuat.ecommerce.internal.uat.platform.pagopa.it/pagopa-ecommerce-event-dispatcher-old/event-dispatcher/event-receivers/commands" ["PROD"]="https://weuprod.ecommerce.internal.platform.pagopa.it/pagopa-ecommerce-event-dispatcher-old/event-dispatcher/event-receivers/commands")
         commandUrl=${commandUrls[${{ parameters.ENV }}]}
         echo $commandUrl
         curl --location $commandUrl \
