feat(commands): add version targeting

--- a/.env.example
+++ b/.env.example
@@ -86,3 +86,7 @@ NPG_BANCOMATPAY_PSP_LIST=BCITITMM
 NPG_BANCOMATPAY_PSP_KEYS={"BCITITMM":"BCITITMM-api-key-bancomatpay"}
 NPG_MYBANK_PSP_LIST=BCITITMM
 NPG_MYBANK_PSP_KEYS={"BCITITMM":"BCITITMM-api-key-mybank"}
+NPG_SATISPAY_PSP_LIST=BCITITMM
+NPG_SATISPAY_PSP_KEYS={"BCITITMM":"BCITITMM-api-key-SATISPAY"}
+NPG_APPLEPAY_PSP_LIST=BCITITMM
+NPG_APPLEPAY_PSP_KEYS={"BCITITMM":"BCITITMM-api-key-APPLEPAY"}
