--- a/.devops/azure-templates/swap-new-old-deployment.yml
+++ b/.devops/azure-templates/swap-new-old-deployment.yml
@@ -53,7 +53,7 @@ steps:
       script: |
         version=$(echo '$(helm_event_dispatcher_releases.helmOutput)' | yq '.[].chart' | sed -e 's/pagopa-ecommerce-event-dispatcher-//g')
         echo "##vso[task.setvariable variable=helm_current_release_version;isOutput=true]$version"
-      failOnStderr: true
+      failOnStderr: false
 
   # STEP 1: Checkout currently deployed version tag
   - script: |
@@ -101,7 +101,7 @@ steps:
           "command": "STOP",
           "deploymentVersion": "NEW"
         }'
-      failOnStderr: true
+      failOnStderr: false
 
   # STEP 4: perform checkout against the new version release tag
   - script: |
@@ -150,4 +150,4 @@ steps:
           "command": "START",
           "deploymentVersion": "NEW"
         }'
-      failOnStderr: true
+      failOnStderr: false
